fix word wrap and text-alignment in neighbours small posts

--- a/app/assets/app/components/focus/neighbours/_neighbours.scss
+++ b/app/assets/app/components/focus/neighbours/_neighbours.scss
@@ -34,7 +34,9 @@
 
     .neighbours_followers, .neighbours_attachedto {
         .small_post_directive {
+            text-align: left;
             margin-bottom: 5px;
+            max-width: 200px;
         }
     }
 }
